--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
+h1{
+  background-color: #ffffff;
+    padding: 20px;
+    padding-bottom: 0px;
+    color: rgb(0, 0, 0);
+    text-align: left;
+}
+
+main {
+  min-height: 80vh;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    text-align: start;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .App-header {
+    background-color: #ffffff;
+    padding-left: 20px;
+    color: rgb(0, 0, 0);
+    text-align: left;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .App-main {
+    background-color: #e9e3e3;
+    margin: 20px;
+    min-height: 80vh;
+    align-items: start;
   }
-}
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    align-items: start;
+  }
+  
+  li {
+    border: 1px solid #ffffff;
+    margin-bottom: 10px;
+    padding: 10px;
+    padding-left: 20px;
+  }
+  
+  button {
+    margin-right: 10px;
+  }
+
+  .article{
+    margin: 0;
+    padding-left: 50px;
+  }
+  
